syntax = "proto3";

package orderPackage;

service OrderService {
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
  rpc SubmitOrder (SubmitOrderRequest) returns (SubmitOrderResponse);
}

message GetOrderRequest {
  string orderNumber = 1;
}

message GetOrderResponse {
  string orderNumber = 1;
  int32 price = 2;
  string hostName = 3;
}

message SubmitOrderRequest {
  string ean = 1;
  int32 quatity = 2;
}

message SubmitOrderResponse {
  string orderNumber = 1;
  string ean = 2;
  int32 quatity = 3;
  string hostName = 4;
}
